--- a/logging.yaml
+++ b/logging.yaml
@@ -16,7 +16,7 @@ handlers:
     class: logging.handlers.RotatingFileHandler
     level: DEBUG
     formatter: simple
-    filename: game.log
+    filename: logs/game.log
     maxBytes: 10485760
     backupCount: 20
 
