Better logging and better bechmarking.
Specifically I reworked the benchmarking decorator in the timer script, and I added a benchmarker to the procedural generator's generate dungeon function as a proof of concept.
I also created a master log file that will be used to log all the information from the game.

--- a/logging.yaml
+++ b/logging.yaml
@@ -27,15 +27,35 @@ handlers:
     filename: logs/procedural_gen.log
     maxBytes: 10485760
     backupCount: 20
+  
+  bechmark_file:
+    class: logging.handlers.RotatingFileHandler
+    level: DEBUG
+    formatter: simple
+    filename: logs/bechmark.log
+    maxBytes: 10485760
+    backupCount: 20
+
+  master_log_file:
+    class: logging.handlers.RotatingFileHandler
+    level: DEBUG
+    formatter: simple
+    filename: logs/master.log
+    maxBytes: 10485760
+    backupCount: 20
 
 loggers:
   game:
     level: DEBUG
-    handlers: [console, game_file]
+    handlers: [console, game_file, master_log_file]
     propagate: no
 
   procedural_gen:
     level: DEBUG
-    handlers: [console, procedural_gen_file]
+    handlers: [console, procedural_gen_file, master_log_file]
     propagate: no
 
+  bechmark:
+    level: DEBUG
+    handlers: [console, bechmark_file, master_log_file]
+    propagate: no
