--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 autopep8==2.0.1
+black==23.1.0
 cffi==1.15.1
+click==8.1.3
 contourpy==1.0.7
 cycler==0.11.0
 fonttools==4.38.0
 kiwisolver==1.4.4
 matplotlib==3.7.0
+mypy-extensions==1.0.0
+networkx==3.0
 numpy==1.24.2
 packaging==23.0
+pathspec==0.11.0
 Pillow==9.4.0
+platformdirs==3.0.0
 pycodestyle==2.10.0
 pycparser==2.21
 pyparsing==3.0.9
